[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Resources/TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Circle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Resources/ButtonFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Game/CircleGrowingTransition.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Game/FadeTransition.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Images/UI/volume-up-4-512.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 241.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 432.0
margin_bottom = 768.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="RichTextLabel" parent="."]
margin_top = 64.0
margin_right = 432.0
margin_bottom = 128.0
custom_colors/default_color = Color( 0.0588235, 0.239216, 0.666667, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=50 freq=-10]Approximately[/wave][/center]"
text = "Approximately"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CircleGrowingTransition" parent="." instance=ExtResource( 5 )]
position = Vector2( 216, 384 )

[node name="CircleSprite" type="Sprite" parent="."]
modulate = Color( 0.0588235, 0.239216, 0.666667, 1 )
position = Vector2( 216, 384 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 136.0
margin_top = 320.0
margin_right = 296.0
margin_bottom = 448.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 152.0
margin_top = 512.0
margin_right = 280.0
margin_bottom = 576.0
custom_colors/font_color_disabled = Color( 0.0588235, 0.239216, 0.666667, 1 )
custom_colors/font_color_focus = Color( 0.0588235, 0.239216, 0.666667, 1 )
custom_colors/font_color = Color( 0.0588235, 0.239216, 0.666667, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.239216, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.0588235, 0.239216, 0.666667, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundIcon" type="Sprite" parent="SoundButton"]
modulate = Color( 0.0588235, 0.239216, 0.666667, 1 )
position = Vector2( 144, 32 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 8 )

[node name="FadeTransition" parent="." instance=ExtResource( 6 )]
position = Vector2( 136, 16 )

[connection signal="transition_finished" from="CircleGrowingTransition" to="." method="_on_CircleGrowingTransition_transition_finished"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="transition_finished" from="FadeTransition" to="." method="_on_FadeTransition_transition_finished"]
